[metadata]
name = keukeiland-jippie13
version = 0.0.1
author = jippie13
author_email = jippiegames12@gmail.com
description = keukeiland
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jippie13/Keukeiland
project_urls =
    Bug Tracker = https://github.com/jippie13/Keukeiland/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
py_modules =
    keukeiland
